fix broken links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -49,7 +49,7 @@
                 Motorola 680x0 Macs!)</p>
             <ul>
                 <li><a href="/pmops/OpenMeFirst">Open Me First</a></li>
-                <li><a href="/pmops/Documentation">Documentation</a></li>
+                <li><a href="/pmops/">Documentation</a></li>
                 <li><a href="/pmops/FAQ">FAQ</a></li>
                 <li><a href="https://sourceforge.net/projects/powermops/files/PowerMops/">Download</a></li>
             </ul>
