--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,10 @@
 </head>
 <body>
 <main>
+    <div style="display: flex;">
+        <img src="/logo.png" width="150" height="125" style="margin-right: 2em;">
         <h1>Mops</h1>
+    </div>
         <p>A full featured, stand-alone development
         environment for programming the Macintosh written by <em>Mike Hore</em>.
         Inspired by <a href="https://en.wikipedia.org/wiki/Smalltalk">Smalltalk</a>
