fix broken links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,10 +5,13 @@
 </head>
 <body>
 <main>
+    <header>
     <div style="display: flex;">
         <img src="/logo.png" width="150" height="125" style="margin-right: 2em;">
         <h1>Mops</h1>
     </div>
+    </header>
+    <section>
         <p>A full featured, stand-alone development
         environment for programming the Macintosh written by <em>Mike Hore</em>.
         Inspired by <a href="https://en.wikipedia.org/wiki/Smalltalk">Smalltalk</a>
@@ -19,10 +22,11 @@
         with extended object-oriented features
         such as multiple inheritance, early and late binding,
         persistent objects, and garbage collection.
-        &nbsp;&nbsp;<a href="/About">More...</a></p>
+        &nbsp;&nbsp;<a href="/about">More...</a></p>
         <p>With over 30 years of development and use, the Mops
             family is battle-tested.
         </p>
+    </section>
     <section>
         <aside>
             <h3>aMops</h3>
@@ -71,7 +75,7 @@
     <section id="more">
         <h2>Go Deeper!</h2>
         <ul>
-            <li><a href="/News">Latest news</a></li>
+            <li><a href="/news">Latest news</a></li>
             <li>The best way to connect with the community is through the
             <a href="https://sourceforge.net/p/powermops/mailman/powermops-users/">mailing list</a>.</li>
         </ul>
