rename to lower case
Netlify has a (mis)feature that "canonicalizes" mixed-case
pathnames to lower case.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -55,9 +55,9 @@
                 for PowerPC-based Macs.  (And up until version 4.0.4,
                 Motorola 680x0 Macs!)</p>
             <ul>
-                <li><a href="/pmops/OpenMeFirst">Open Me First</a></li>
+                <li><a href="/pmops/openmefirst">Open Me First</a></li>
                 <li><a href="/pmops/">Documentation</a></li>
-                <li><a href="/pmops/FAQ">FAQ</a></li>
+                <li><a href="/pmops/faq">FAQ</a></li>
                 <li><a href="https://sourceforge.net/projects/powermops/files/PowerMops/">Download</a></li>
             </ul>
         </aside>
