--- a/src/components/SiteSidebar.astro
+++ b/src/components/SiteSidebar.astro
@@ -10,7 +10,7 @@ import { sidebar } from '../config.ts';
           <h4 class="nav-group-title"><a href={`${Astro.site}${category.link}`}>{category.text}</a></h4>
           <ul>
             {category.children.map(child => (
-              <li class="nav-link"><a href={`${Astro.site}${child.link}`}>{child.text}</a></li>
+              <li class="nav-link"><a href={`${`${child.link}.startsWith("http")` ? "" : `${Astro.site}`}${child.link}`}>{child.text}</a></li>
             ))}
           </ul>
         </div>
