aMops readme and release notes

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -34,6 +34,8 @@
             all new code generator for the ARM family of processors.</p>
             <ul>
                 <li>Manual</li>
+                <li><a href="/amops/readme/">Readme</a></li>
+                <li><a href="/amops/release-notes/">Release Notes</a></li>
                 <li><a href="https://sourceforge.net/projects/powermops/files/aMops-CG/">Download</a></li>
             </ul>
         </aside>
