add copyright footer to front page

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,3 +1,6 @@
+---
+import ArticleFooter from '../components/ArticleFooter.astro';
+---
 <html>
 <head>
     <link rel="stylesheet" href="https://unpkg.com/mvp.css">
@@ -65,7 +68,7 @@
         </aside>
         <aside>
             <h3>MAX</h3>
-            <p><em>Mike's ArXitecture:</em> Floating point and capabilities-based 
+            <p><em>Mike's ArXitecture:</em> Floating point and capabilities-based
                 runtime.</p>
             <ul>
                 <li>Manual</li>
@@ -81,6 +84,9 @@
             <li>The best way to connect with the community is through the
             <a href="https://sourceforge.net/p/powermops/mailman/powermops-users/">mailing list</a>.</li>
         </ul>
+    </section>
+    <section>
+      <ArticleFooter />
     </section>
 </main>
 </body>
