--- a/src/components/SiteSidebar.astro
+++ b/src/components/SiteSidebar.astro
@@ -1,5 +1,8 @@
 ---
 import { sidebar } from '../config.ts';
+let subtree = Astro.request.url.pathname.split('/')[1];
+console.log(`sidebar ${Astro.request.url}`);
+console.log(subtree);
 ---
 
 <nav>
@@ -8,11 +11,13 @@ import { sidebar } from '../config.ts';
       <li>
         <div class="nav-group">
           <h4 class="nav-group-title"><a href={category.link}>{category.text}</a></h4>
+          { category?.subtree == subtree &&
           <ul>
             {category.children.map(child => (
               <li class="nav-link"><a href={child.link}>{child.text}</a></li>
             ))}
           </ul>
+          }
         </div>
       </li>
     ))}
