--- a/src/components/SiteSidebar.astro
+++ b/src/components/SiteSidebar.astro
@@ -1,8 +1,6 @@
 ---
 import { sidebar } from '../config.ts';
 let subtree = Astro.request.url.pathname.split('/')[1];
-console.log(`sidebar ${Astro.request.url}`);
-console.log(subtree);
 ---
 
 <nav>
@@ -11,7 +9,7 @@ console.log(subtree);
       <li>
         <div class="nav-group">
           <h4 class="nav-group-title"><a href={category.link}>{category.text}</a></h4>
-          { category?.subtree == subtree &&
+          { (category.subtree == undefined || category.subtree == subtree) &&
           <ul>
             {category.children.map(child => (
               <li class="nav-link"><a href={child.link}>{child.text}</a></li>
