change prev/next arrows for mac

--- a/src/components/PrevNext.astro
+++ b/src/components/PrevNext.astro
@@ -28,9 +28,9 @@ for (const page of data) {
 ---
 
 <div class="pnrow">
-  <div class="pnl">{prev.title != "" && <a href={prev.path}>&#11164;&nbsp;{prev.title}</a>}</div>
+  <div class="pnl">{prev.title != "" && <a href={prev.path}>&#x2B05;&nbsp;{prev.title}</a>}</div>
   <div class="pnc">&nbsp;<br>&nbsp;</div>
-  <div class="pnr">{next.title != "" && <a href={next.path}>{next.title}&nbsp;&#11166;</a>}</div>
+  <div class="pnr">{next.title != "" && <a href={next.path}>{next.title}&nbsp;&#x27A1;</a>}</div>
 </div>
 
 <style>
