add SourceForge Community Choice badge

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -84,6 +84,13 @@ import ArticleFooter from '../components/ArticleFooter.astro';
             <li>The best way to connect with the community is through the
             <a href="https://sourceforge.net/p/powermops/mailman/powermops-users/">mailing list</a>.</li>
         </ul>
+        <!-- Begin SF Tag -->
+<div class="sf-root" data-id="152075" data-badge="oss-community-choice-white" data-metadata="achievement=oss-community-choice" style="width:125px;padding-left:1em;">
+    <a href="https://sourceforge.net/projects/powermops/" target="_blank">PowerMops</a>
+</div>
+<script>(function () {var sc=document.createElement('script');sc.type='text/javascript';sc.async=true;sc.src='https://b.sf-syn.com/badge_js?sf_id=152075';var p=document.getElementsByTagName('script')[0];p.parentNode.insertBefore(sc, p);})();
+</script>
+<!-- End SF Tag -->
     </section>
     <section>
       <ArticleFooter />
