--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -21,7 +21,7 @@ const githubEditUrl = `https://github.com/PowerMops/powermops-site/blob/main/${c
 <html lang={ content.lang || 'en' }>
   <head>
     <title>{content.title}</title>
-    
+
     <link rel="stylesheet" href="/index.css" />
     <link rel="stylesheet" href="/theme.css" />
     <link rel="stylesheet" href="/code.css" />
@@ -233,5 +233,6 @@ const githubEditUrl = `https://github.com/PowerMops/powermops-site/blob/main/${c
         <DocSidebar client:idle headers={headers} editHref={githubEditUrl} />
       </aside>
     </main>
+  <!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3908cfe42eaf4232941ec0396c7f4452"}'></script><!-- End Cloudflare Web Analytics -->
   </body>
 </html>
