--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -96,5 +96,6 @@ import ArticleFooter from '../components/ArticleFooter.astro';
       <ArticleFooter />
     </section>
 </main>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3908cfe42eaf4232941ec0396c7f4452"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
