move Cloudflare analytics to page footers

--- a/src/_includes/partials/footer.njk
+++ b/src/_includes/partials/footer.njk
@@ -4,4 +4,5 @@
 <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License"
     src="https://i.creativecommons.org/l/by/4.0/80x15.png"></a></p>
   </div>
+<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3908cfe42eaf4232941ec0396c7f4452"}'></script><!-- End Cloudflare Web Analytics -->
 </footer>
