--- a/src/_includes/layouts/manual.njk
+++ b/src/_includes/layouts/manual.njk
@@ -30,7 +30,7 @@
     <div class="container">
       <div class="row">
         <div class="col-2 d-none d-md-block">
-          {% include "../partials/sitesidebar.html" %}
+          {% include "../partials/sitesidebar.njk" %}
         </div>
         <div class="col" id="article">
           <article class="content">
@@ -60,6 +60,6 @@
         </div>
       </div>
     </div>
-    {% include "../partials/footer.html" %}
+    {% include "../partials/footer.njk" %}
   </body>
 </html>
